--- a/HRM_Project_framework/pom.xml
+++ b/HRM_Project_framework/pom.xml
@@ -35,7 +35,28 @@
         <artifactId>extentreports</artifactId>
         <version>5.0.9</version> <!-- Latest version -->
     </dependency>
+<!-- https://mvnrepository.com/artifact/log4j/log4j -->
+<dependency>
+    <groupId>log4j</groupId>
+    <artifactId>log4j</artifactId>
+    <version>1.2.17</version>
+</dependency>
+ <dependency>
+        <groupId>org.apache.logging.log4j</groupId>
+        <artifactId>log4j-api</artifactId>
+        <version>2.20.0</version>
+    </dependency>
 
+    <dependency>
+        <groupId>org.apache.logging.log4j</groupId>
+        <artifactId>log4j-core</artifactId>
+        <version>2.20.0</version>
+    </dependency>
 
+    <dependency>
+    	<groupId>Automation_practice</groupId>
+    	<artifactId>Automation_practice</artifactId>
+    	<version>0.0.1-SNAPSHOT</version>
+    </dependency>
   </dependencies>
 </project>
